kustomize/base/productcatalogservice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: productcatalogservice
  namespace: core
  labels:
    app: productcatalogservice
spec:
  type: ClusterIP
  selector:
    app: productcatalogservice
  ports:
    - name: grpc
      port: 3550
      targetPort: 3550
